force-app/main/default/objects/ProductEventTarget__c/ProductEventTarget__c.object-meta.xml
<CustomObject>
    <label>품목별 행사대상</label>
    <pluralLabel>Product Event Prices</pluralLabel>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>