force-app/main/default/objects/ProductEventTarget__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>활성화 / 비 활성화</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>