force-app/main/default/objects/ProductEventTarget__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>대리점</description>
    <label>Partner</label>
    <referenceTo>Partner__c</referenceTo>
    <relationshipLabel>Product Event Target</relationshipLabel>
    <relationshipName>ProductEventTarget</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>