force-app/main/default/objects/ProductEventTarget__c/fields/ProductEvent__c.field-meta.xml
<CustomField>
    <fullName>ProductEvent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>행사코드</description>
    <label>Product Event</label>
    <referenceTo>ProductEvent__c</referenceTo>
    <relationshipLabel>Product Event Target</relationshipLabel>
    <relationshipName>Product_Event_Target</relationshipName>
    <type>Lookup</type>
</CustomField>